Fix a bunch of FindBugs warnings